src/test/ui/issues/issue-17904-2.stderr
error[E0392]: parameter `T` is never used
  --> $DIR/issue-17904-2.rs:4:12
   |
LL | struct Foo<T> where T: Copy;
   |            ^ unused parameter
   |
   = help: consider removing `T` or using a marker such as `std::marker::PhantomData`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0392`.
